corrected carousel layot. Responsiveness, image-sizing, dark rectangle alignment is now better.

--- a/src/card.css
+++ b/src/card.css
@@ -18,10 +18,5 @@
       } */ 
 
 
-      /* @media (min-width: 992px) { 
-        .carousel-caption {
-            max-width: 1000px;
-        }
-       }; */
         
       
